[package]
name = "baecase"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.17.2", features = ["experimental_bevy_feathers"] }
bevy_bae = { path = "../bevy_bae"}
rand = "0.9.2"
bevy_mod_props = { version = "0.1", git = "https://github.com/NthTensor/trill" }
fake = "4.4.0"

[profile.dev]
opt-level = 1
